[profile.profiling]
inherits = "release"
debug = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false
strip = "symbols"

[workspace]
members = ["wtx", "wtx-bench", "wtx-fuzz", "wtx-macros", "wtx-ui"]
resolver = "2"
