[profile.deploy]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = true
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true

[workspace]
members = [
    "wtx",
    #"wtx-fuzz",
    #"wtx-instances",
    #"wtx-macros",
    #"wtx-ui"
]
resolver = "3"
