[dependencies]
plotters = { default-features = false, features = ["histogram", "svg_backend"], version = "0.3" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.34" }
wtx = { features = ["tokio", "web-socket-handshake"], path = "../wtx" }

[package]
description = "Benchmarks"
edition = "2021"
license = "Apache-2.0"
name = "wtx-bench"
publish = false
version = "0.0.1"
