[dependencies]
futures = { default-features = false, version = "0.3" }
plotters = { default-features = false, features = ["histogram", "svg_backend"], version = "0.3" }
sqlx = { default-features = false, features = ["postgres", "runtime-tokio"], version = "0.7" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tokio-postgres = { default-features = false, features = ["runtime"], version = "0.7" }
diesel-async = { default-features = false, features = ["postgres"], version = "0.4.1" }
diesel = { default-features = false, version = "2.1" }
wtx = { default-features = false, features = ["atoi", "postgres", "simdutf8", "tokio", "web-socket-handshake"], path = "../wtx" }

[package]
description = "Benchmarks"
edition = "2021"
license = "Apache-2.0"
name = "wtx-bench"
publish = false
version = "0.0.1"
