[[example]]
name = "calendar"
path = "examples/calendar.rs"

[[example]]
name = "database-client-postgres"
path = "examples/database-client-postgres.rs"
required-features = ["database-client-postgres"]

[[example]]
name = "database-client-postgres-batch"
path = "examples/database-client-postgres-batch.rs"
required-features = ["database-client-postgres-batch"]

[[example]]
name = "database-client-postgres-composite-type"
path = "examples/database-client-postgres-composite-type.rs"
required-features = ["database-client-postgres-composite-type"]

[[example]]
name = "database-client-postgres-enum"
path = "examples/database-client-postgres-enum.rs"
required-features = ["database-client-postgres-enum"]

[[example]]
name = "database-client-tests"
path = "examples/database-client-tests.rs"
required-features = ["database-client-tests"]

[[example]]
name = "environment-variables"
path = "examples/environment-variables.rs"
required-features = ["environment-variables"]

[[example]]
name = "executor"
path = "examples/executor.rs"
required-features = ["executor"]

[[example]]
name = "grpc-client"
path = "examples/grpc-client.rs"
required-features = ["grpc-client"]

[[example]]
name = "grpc-server"
path = "examples/grpc-server.rs"
required-features = ["grpc-server"]

[[example]]
name = "http2-client"
path = "examples/http2-client.rs"
required-features = ["http2-client"]

[[example]]
name = "http2-client-pool"
path = "examples/http2-client-pool.rs"
required-features = ["http2-client-pool"]

[[example]]
name = "http2-server"
path = "examples/http2-server.rs"
required-features = ["http2-server"]

[[example]]
name = "http2-server-framework"
path = "examples/http2-server-framework.rs"
required-features = ["http2-server-framework"]

[[example]]
name = "http2-server-framework-cors"
path = "examples/http2-server-framework-cors.rs"
required-features = ["http2-server-framework-cors"]

[[example]]
name = "http2-server-framework-redirect"
path = "examples/http2-server-framework-redirect.rs"
required-features = ["http2-server-framework-redirect"]

[[example]]
name = "http2-server-framework-session"
path = "examples/http2-server-framework-session.rs"
required-features = ["http2-server-framework-session"]

[[example]]
name = "secret"
path = "examples/secret.rs"
required-features = ["secret"]

[[example]]
name = "tls-client"
path = "examples/tls-client.rs"
required-features = ["tls-client"]

[[example]]
name = "tls-client-concurrent"
path = "examples/tls-client-concurrent.rs"
required-features = ["tls-client-concurrent"]

[[example]]
name = "tls-server"
path = "examples/tls-server.rs"
required-features = ["tls-server"]

[[example]]
name = "web-socket-client"
path = "examples/web-socket-client.rs"
required-features = ["web-socket-client"]

[[example]]
name = "web-socket-client-concurrent"
path = "examples/web-socket-client-concurrent.rs"
required-features = ["web-socket-client-concurrent"]

[[example]]
name = "web-socket-server"
path = "examples/web-socket-server.rs"
required-features = ["web-socket-server"]

[[example]]
name = "web-socket-server-framework"
path = "examples/web-socket-server-framework.rs"
required-features = ["web-socket-server-framework"]

[[example]]
name = "x509"
path = "examples/x509.rs"
required-features = ["x509"]

[build-dependencies]
pb-rs = { default-features = false, optional = true, version = "0.10" }

[dependencies]
quick-protobuf = { default-features = false, optional = true, version = "0.8" }
serde = { default-features = false, optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["std"], optional = true, version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], optional = true, version = "1.0" }
wtx = { default-features = false, features = ["optimizations-std"], path = "../wtx" }

[features]
database-client-postgres = ["postgres"]
database-client-postgres-batch = ["postgres"]
database-client-postgres-composite-type = ["postgres"]
database-client-postgres-enum = ["postgres"]
database-client-tests = ["postgres", "wtx/database-tests"]
environment-variables = ["wtx/macros"]
executor = ["wtx/macros"]
grpc-client = ["grpc", "wtx/grpc-client"]
grpc-server = ["grpc", "wtx/nightly", "wtx/grpc-server"]
http2-client = ["tokio", "wtx/ccadb", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio","wtx/http2"]
http2-client-pool = ["tokio", "wtx/ccadb", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio", "wtx/http2-client-pool"]
http2-server = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/http2", "wtx/nightly", "wtx/tokio","wtx/web-socket"]
http2-server-framework = ["serde", "serde_json", "tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/nightly", "wtx/http2-server-framework", "wtx/postgres-pool", "wtx/secret", "wtx/serde_json", "wtx/tokio"]
http2-server-framework-cors = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/http2-server-framework", "wtx/nightly", "wtx/tokio"]
http2-server-framework-redirect = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/http2-server-framework", "wtx/nightly", "wtx/tokio"]
http2-server-framework-session = ["serde", "serde_json", "tokio", "wtx/argon2", "wtx/crypto-ring", "wtx/getrandom", "wtx/http2-server-framework", "wtx/http-session", "wtx/macros", "wtx/nightly", "wtx/postgres-pool", "wtx/tokio"]
secret = ["wtx/getrandom", "wtx/secret"]
tls-client = ["tokio", "wtx/ccadb", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio"]
tls-client-concurrent = ["tokio", "wtx/ccadb", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio"]
tls-server = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio"]
web-socket-client = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio", "wtx/web-socket-handshake"]
web-socket-client-concurrent = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio", "wtx/web-socket-handshake"]
web-socket-server = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/tokio", "wtx/web-socket-handshake"]
web-socket-server-framework = ["tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/nightly", "wtx/tokio", "wtx/web-socket-server-framework"]
x509 = ["wtx/crypto-ring", "wtx/x509"]

grpc = ["pb-rs", "quick-protobuf", "tokio", "wtx/crypto-ring", "wtx/getrandom", "wtx/quick-protobuf", "wtx/tokio"]
postgres = ["tokio", "wtx/getrandom", "wtx/postgres", "wtx/tokio"]

[package]
edition = "2024"
name = "wtx-examples"
publish = false
rust-version = "1.96"
version = "0.0.0"

