[[bin]]
name = "web-socket"
path = "web_socket.rs"
required-features = ["libfuzzer-sys/link_libfuzzer"]

[dependencies]
libfuzzer-sys = { default-features = false, version = "0.4" }
tokio = { default-features = false, features = ["rt"], version = "1.36" }
wtx = { default-features = false, features = ["arbitrary", "web-socket"], path = "../wtx" }

[package]
name = "wtx-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true
