[[bin]]
name = "web-socket"
path = "web_socket.rs"
required-features = ["libfuzzer-sys/link_libfuzzer"]

[dependencies]
libfuzzer-sys = { default-features = false, version = "0.4" }
tokio = { default-features = false, features = ["rt"], version = "1.0" }
wtx = { default-features = false, features = ["arbitrary", "web-socket"], path = "../wtx" }

[package]
edition = "2021"
name = "wtx-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true
