[[bin]]
name = "date_time"
path = "date_time.rs"
required-features = ["libfuzzer-sys/link_libfuzzer"]

[[bin]]
name = "deque"
path = "deque.rs"
required-features = ["libfuzzer-sys/link_libfuzzer"]

[[bin]]
name = "web-socket"
path = "web_socket.rs"
required-features = ["libfuzzer-sys/link_libfuzzer"]

[dependencies]
libfuzzer-sys = { default-features = false, version = "0.4" }
wtx = { default-features = false, features = ["arbitrary", "executor", "web-socket"], path = "../wtx" }

[package]
edition = "2024"
name = "wtx-fuzz"
publish = false
rust-version = "1.88"
version = "0.0.0"

[package.metadata]
cargo-fuzz = true
