# Fulfillment Binaries

[[bin]]
name = "autobahn-client"
path = "src/bin/autobahn-client.rs"
required-features = ["wtx/flate2", "wtx/web-socket-handshake"]

[[bin]]
name = "autobahn-server"
path = "src/bin/autobahn-server.rs"
required-features = ["wtx/flate2", "wtx/nightly", "wtx/pool", "wtx/web-socket-handshake"]

[[bin]]
name = "boringssl"
path = "src/bin/boringssl.rs"
required-features = ["wtx/tls"]

[[bin]]
name = "h2load"
path = "src/bin/h2load.rs"
required-features = ["wtx/http2", "wtx/nightly"]

[[bin]]
name = "h2spec-high-server"
path = "src/bin/h2spec-high-server.rs"
required-features = ["wtx/http2", "wtx/nightly"]

[[bin]]
name = "h2spec-low-server"
path = "src/bin/h2spec-low-server.rs"
required-features = ["wtx/http2", "wtx/nightly"]

# Database Examples

[[example]]
name = "database-client-mysql"
path = "database-examples/database-client-mysql.rs"
required-features = ["mysql"]

[[example]]
name = "database-client-postgres"
path = "database-examples/database-client-postgres.rs"
required-features = ["postgres"]

[[example]]
name = "database-client-postgres-composite-type"
path = "database-examples/database-client-postgres-composite-type.rs"
required-features = ["postgres"]

[[example]]
name = "database-client-postgres-enum"
path = "database-examples/database-client-postgres-enum.rs"
required-features = ["postgres"]

# Generic Examples

[[example]]
name = "client-api-framework"
path = "generic-examples/client-api-framework.rs"
required-features = ["wtx/client-api-framework", "wtx/http-client-framework", "wtx/serde_json", "wtx/web-socket-handshake", "wtx-macros"]

[[example]]
name = "grpc-client"
path = "generic-examples/grpc-client.rs"
required-features = ["grpc-client"]

[[example]]
name = "grpc-server"
path = "generic-examples/grpc-server.rs"
required-features = ["grpc-server", "wtx/rustls"]

[[example]]
name = "http-client-framework"
path = "generic-examples/http-client-framework.rs"
required-features = ["wtx/http-client-framework"]

[[example]]
name = "pool"
path = "generic-examples/pool.rs"
required-features = ["wtx/pool"]

[[example]]
name = "tls"
path = "generic-examples/tls.rs"
required-features = ["tls"]

# HTTP Server Framework Examples

[[example]]
name = "http-server-framework"
path = "http-server-framework-examples/http-server-framework.rs"
required-features = ["serde", "wtx/http-server-framework", "wtx/matchit", "wtx/pool", "postgres", "wtx/serde_json"]

[[example]]
name = "http-server-framework-cors"
path = "http-server-framework-examples/http-server-framework-cors.rs"
required-features = ["wtx/http-server-framework"]

[[example]]
name = "http-server-framework-redirect"
path = "http-server-framework-examples/http-server-framework-redirect.rs"
required-features = ["wtx/http-server-framework"]

[[example]]
name = "http-server-framework-session"
path = "http-server-framework-examples/http-server-framework-session.rs"
required-features = ["argon2", "rand_chacha", "rand_core", "serde", "serde_json", "wtx/argon2", "wtx/http-server-framework", "wtx/http-session", "wtx/pool", "postgres", "wtx/rand_chacha", "wtx-macros"]

# HTTP/2 Examples

[[example]]
name = "http2-client"
path = "http2-examples/http2-client.rs"
required-features = ["wtx/http2"]

[[example]]
name = "http2-server"
path = "http2-examples/http2-server.rs"
required-features = ["wtx/http2", "wtx/rustls", "wtx/web-socket"]

[[example]]
name = "http2-web-socket"
path = "http2-examples/http2-web-socket.rs"
required-features = ["wtx/http2", "wtx/rustls", "wtx/web-socket"]

# WebSocket Examples

[[example]]
name = "web-socket-client"
path = "web-socket-examples/web-socket-client.rs"
required-features = ["wtx/web-socket-handshake"]

[[example]]
name = "web-socket-concurrent-client"
path = "web-socket-examples/web-socket-concurrent-client.rs"
required-features = ["wtx/rustls", "wtx/web-socket-handshake", "wtx/webpki-roots"]

[[example]]
name = "web-socket-server"
path = "web-socket-examples/web-socket-server.rs"
required-features = ["wtx/pool", "wtx/rustls", "wtx/web-socket-handshake"]

[build-dependencies]
pb-rs = { default-features = false, optional = true, version = "0.10" }

[dependencies]
argon2 = { default-features = false, optional = true, version = "0.5" }
quick-protobuf = { default-features = false, optional = true, version = "0.8" }
rand_chacha = { default-features = false, optional = true, version = "0.3" }
rand_core = { default-features = false, features = ["getrandom"], optional = true, version = "0.6" }
serde = { default-features = false, optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], optional = true, version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["tokio"], path = "../wtx" }
wtx-macros = { default-features = false, optional = true, path = "../wtx-macros" }

[features]
grpc = ["pb-rs", "quick-protobuf", "wtx/grpc", "wtx/quick-protobuf"]
mysql = ["wtx/mysql"]
postgres = ["wtx/postgres"]
tls = ["wtx/tls"]

[package]
edition = "2021"
name = "wtx-instances"
publish = false
version = "0.0.0"