[[bin]]
name = "autobahn-client"
path = "src/bin/autobahn-client.rs"
required-features = ["autobahn-client"]

[[bin]]
name = "autobahn-client-concurrent"
path = "src/bin/autobahn-client-concurrent.rs"
required-features = ["autobahn-client-concurrent"]

[[bin]]
name = "autobahn-server"
path = "src/bin/autobahn-server.rs"
required-features = ["autobahn-server"]

[[bin]]
name = "ccadb"
path = "src/bin/ccadb.rs"
required-features = ["ccadb"]

[[bin]]
name = "h2load"
path = "src/bin/h2load.rs"
required-features = ["h2load"]

[[bin]]
name = "h2spec-high-server"
path = "src/bin/h2spec-high-server.rs"
required-features = ["h2spec-high-server"]

[[bin]]
name = "h2spec-low-server"
path = "src/bin/h2spec-low-server.rs"
required-features = ["h2spec-low-server"]

[[bin]]
name = "x509-limbo"
path = "src/bin/x509-limbo.rs"
required-features = ["x509-limbo"]

[dependencies]
serde = { default-features = false, optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], optional = true, version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["crypto-ring", "executor", "macros", "nightly", "std", "tokio"], path = "../wtx" }

[features]
autobahn-client = ["wtx/flate2", "wtx/web-socket-handshake"]
autobahn-client-concurrent = ["wtx/flate2", "wtx/web-socket-handshake"]
autobahn-server = ["wtx/flate2", "wtx/nightly", "wtx/web-socket-handshake"]
ccadb = ["wtx/hashbrown", "wtx/http-client-pool", "wtx/http2", "wtx/x509"]
h2load = ["wtx/http2", "wtx/nightly"]
h2spec-high-server = ["wtx/http2", "wtx/nightly"]
h2spec-low-server = ["wtx/http2"]
x509-limbo = ["wtx/serde", "serde/derive", "serde_json/std", "wtx/x509"]

[package]
edition = "2024"
name = "wtx-internal"
publish = false
rust-version = "1.95"
version = "0.0.0"
