[[bin]]
name = "autobahn-client"
path = "src/bin/autobahn-client.rs"
required-features = ["autobahn-client"]

[[bin]]
name = "autobahn-client-concurrent"
path = "src/bin/autobahn-client-concurrent.rs"
required-features = ["autobahn-client-concurrent"]

[[bin]]
name = "autobahn-server"
path = "src/bin/autobahn-server.rs"
required-features = ["autobahn-server"]

[[bin]]
name = "boringssl"
path = "src/bin/boringssl.rs"
required-features = ["boringssl"]

[[bin]]
name = "boringssl-config"
path = "src/bin/boringssl-config.rs"
required-features = ["boringssl-config"]

[[bin]]
name = "ccadb"
path = "src/bin/ccadb.rs"
required-features = ["ccadb"]

[[bin]]
name = "h2load"
path = "src/bin/h2load.rs"
required-features = ["h2load"]

[[bin]]
name = "h2spec-high"
path = "src/bin/h2spec-high.rs"
required-features = ["h2spec-high"]

[[bin]]
name = "h2spec-low"
path = "src/bin/h2spec-low.rs"
required-features = ["h2spec-low"]

[[bin]]
name = "x509-limbo"
path = "src/bin/x509-limbo.rs"
required-features = ["x509-limbo"]

[dependencies]
serde = { default-features = false, optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], optional = true, version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["crypto-ring", "nightly", "optimizations-std", "tokio"], path = "../wtx" }

[features]
autobahn-client = ["wtx/zlib-rs", "wtx/web-socket-handshake"]
autobahn-client-concurrent = ["wtx/zlib-rs", "wtx/web-socket-handshake"]
autobahn-server = ["wtx/zlib-rs", "wtx/web-socket-server-framework"]
boringssl = ["wtx/tls"]
boringssl-config = ["serde/derive", "serde_json/std", "wtx/serde"]
ccadb = ["wtx/ccadb", "wtx/hashbrown", "wtx/http2-client-pool", "wtx/http2"]
h2load = ["wtx/http2-server-framework", "wtx/nightly"]
h2spec-high = ["wtx/http2"]
h2spec-low = ["wtx/http2"]
x509-limbo = ["wtx/serde", "serde/derive", "serde_json/std", "wtx/x509"]

[package]
edition = "2024"
name = "wtx-internal"
publish = false
rust-version = "1.96"
version = "0.0.0"
